test/invalid/baseline/async-iterable-readonly.txt
Syntax error at line 3 in async-iterable-readonly.webidl, since `interface AsyncIterable`:
  readonly async iterable<long
  ^ Missing return type
